--- a/sys/dev/netif/iwn/Makefile
+++ b/sys/dev/netif/iwn/Makefile
@@ -1,3 +1,4 @@
+
 # $FreeBSD: head/sys/modules/iwn/Makefile 253911 2013-08-03 08:21:35Z uqs $
 
 KMOD    = if_iwn
@@ -5,6 +6,6 @@ SRCS    = if_iwn.c device_if.h bus_if.h pci_if.h opt_iwn.h opt_wlan.h
 
 SUBDIR	= fw
 
-#CFLAGS += -DIWN_DEBUG
+#KCFLAGS += -DIWN_DEBUG
 
 .include <bsd.kmod.mk>
