--- a/sys/dev/raid/aac/Makefile
+++ b/sys/dev/raid/aac/Makefile
@@ -6,7 +6,7 @@ SRCS+=	opt_cam.h opt_aac.h
 SRCS+=	device_if.h bus_if.h pci_if.h
 
 # To enable debug output from the driver, uncomment these two lines.
-#CFLAGS+= -DAAC_DEBUG=2
+#KCFLAGS+= -DAAC_DEBUG=2
 #SRCS+=	aac_debug.c
 
 .include <bsd.kmod.mk>
