--- a/sys/dev/raid/amr/Makefile
+++ b/sys/dev/raid/amr/Makefile
@@ -5,7 +5,7 @@ SRCS=	amr.c amr_pci.c amr_disk.c device_if.h bus_if.h pci_if.h
 SRCS+=	opt_amr.h
 
 # Enable a questionable optimisation for newer adapters
-#CFLAGS+= -DAMR_QUARTZ_GOFASTER
+#KCFLAGS+= -DAMR_QUARTZ_GOFASTER
 
 SUBDIR= amr_cam
 
