--- a/sys/dev/raid/twa/Makefile
+++ b/sys/dev/raid/twa/Makefile
@@ -38,8 +38,8 @@ SRCS=  tw_osl_freebsd.c tw_osl_cam.c \
       bus_if.h device_if.h pci_if.h opt_cam.h opt_twa.h
 
 # Uncomment the following line to turn on Enclosure Services support.
-#CFLAGS+= -DTWA_ENCLOSURE_SUPPORT
+#KCFLAGS+= -DTWA_ENCLOSURE_SUPPORT
 
-#CFLAGS+= -DTWA_DEBUG=0
+#KCFLAGS+= -DTWA_DEBUG=0
 
 .include <bsd.kmod.mk>
