--- a/sys/dev/raid/twe/Makefile
+++ b/sys/dev/raid/twe/Makefile
@@ -3,7 +3,7 @@
 KMOD=	twe
 SRCS=	bus_if.h device_if.h pci_if.h twe.c twe_freebsd.c
 
-#CFLAGS+=-DTWE_DEBUG=0
+#KCFLAGS+=-DTWE_DEBUG=0
 
 # The 3ware controller offers a choice of options related to handling of
 # mirror consistency in shutdown situations.
