--- a/sys/dev/raid/mfi/Makefile
+++ b/sys/dev/raid/mfi/Makefile
@@ -7,6 +7,6 @@ SRCS=	mfi.c mfi_pci.c mfi_disk.c mfi_debug.c mfi_syspd.c mfi_tbolt.c
 SRCS+=	opt_mfi.h
 SRCS+=	device_if.h bus_if.h pci_if.h
 
-#CFLAGS += -DMFI_DEBUG
+#KCFLAGS += -DMFI_DEBUG
 
 .include <bsd.kmod.mk>
