--- a/sys/dev/raid/mly/Makefile
+++ b/sys/dev/raid/mly/Makefile
@@ -1,3 +1,4 @@
+
 # $FreeBSD: src/sys/modules/mly/Makefile,v 1.3 2001/07/14 00:12:23 msmith Exp $
 
 KMOD=	mly
@@ -5,6 +6,6 @@ SRCS=	mly.c
 SRCS+=	opt_cam.h
 SRCS+=	device_if.h bus_if.h pci_if.h
 
-#CFLAGS+=	-DMLY_DEBUG=3
+#KCFLAGS+=	-DMLY_DEBUG=3
 
 .include <bsd.kmod.mk>
