--- a/sys/dev/raid/mrsas/Makefile
+++ b/sys/dev/raid/mrsas/Makefile
@@ -4,5 +4,6 @@ KMOD=	mrsas
 SRCS=	mrsas.c mrsas_cam.c mrsas_ioctl.c mrsas_fp.c
 SRCS+=	device_if.h bus_if.h pci_if.h opt_cam.h
 
-#CFLAGS+= -DMRSAS_DEBUG
+#KCFLAGS+= -DMRSAS_DEBUG
+
 .include <bsd.kmod.mk>
