--- a/lib/librecrypto/Makefile.inc
+++ b/lib/librecrypto/Makefile.inc
@@ -28,6 +28,7 @@ CFLAGS+=	-DSTDC_HEADERS=1 \
 		-DHAVE_INET_PTON=1 \
 		-DHAVE_MEMMEM=1 \
 		-DHAVE_READPASSPHRASE=1 \
+		-DHAVE_REALLOCARRAY=1 \
 		-DHAVE_STRLCAT=1 \
 		-DHAVE_STRLCPY=1 \
 		-DHAVE_STRCASECMP=1 \
