kernel: Remove puffs(4), putter(9) and associated libs and utilities.
All of these were originally pushed and hooked into the build in non-
working condition so that they would not go stale break building. The
hope was that someone would pick up the work and fix the remaining
issues, which never materialized.

This has led to more harm than good, with people occasionally assuming
that this code is functional. Also, the existence of /usr/include/fuse.h
might lead configure checks into believing that we have a working
implementation.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3448,6 +3448,54 @@ TO_REMOVE+=/etc/devd/uath.conf
 TO_REMOVE+=/usr/include/bus/u4b/usb_compat_linux.h
 TO_REMOVE+=/usr/sbin/kgmon
 TO_REMOVE+=/usr/share/man/man8/kgmon.8.gz
+TO_REMOVE+=/boot/kernel/puffs.ko
+TO_REMOVE+=/boot/kernel/putter.ko
+TO_REMOVE+=/usr/include/dev/misc/putter
+TO_REMOVE+=/usr/include/fuse.h
+TO_REMOVE+=/usr/include/fuse_opt.h
+TO_REMOVE+=/usr/include/puffs.h
+TO_REMOVE+=/usr/include/puffsdump.h
+TO_REMOVE+=/usr/include/vfs/puffs
+TO_REMOVE+=/usr/lib/libpuffs.a
+TO_REMOVE+=/usr/lib/libpuffs.so
+TO_REMOVE+=/usr/lib/libpuffs.so.3
+TO_REMOVE+=/usr/lib/librefuse.a
+TO_REMOVE+=/usr/lib/librefuse.so
+TO_REMOVE+=/usr/lib/librefuse.so.3
+TO_REMOVE+=/usr/lib/profile/libpuffs.a
+TO_REMOVE+=/usr/lib/profile/librefuse.a
+TO_REMOVE+=/usr/sbin/mount_psshfs
+TO_REMOVE+=/usr/share/examples/puffs
+TO_REMOVE+=/usr/share/man/man3/fuse_main.3.gz
+TO_REMOVE+=/usr/share/man/man3/fuse_opt_add_arg.3.gz
+TO_REMOVE+=/usr/share/man/man3/fuse_opt_parse.3.gz
+TO_REMOVE+=/usr/share/man/man3/fuse_setup.3.gz
+TO_REMOVE+=/usr/share/man/man3/fuse_teardown.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_cc.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_cred.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_flush.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_framebuf.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_create.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_getattr.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_link.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_mkdir.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_mknod.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_open.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_read.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_readdir.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_readlink.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_rename.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_rmdir.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_symlink.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_fuse_node_write.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_node.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_ops.3.gz
+TO_REMOVE+=/usr/share/man/man3/puffs_path.3.gz
+TO_REMOVE+=/usr/share/man/man3/refuse.3.gz
+TO_REMOVE+=/usr/share/man/man4/puffs.4.gz
+TO_REMOVE+=/usr/share/man/man8/mount_psshfs.8.gz
+TO_REMOVE+=/usr/share/man/man9/putter.9.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
