--- a/sys/dev/misc/Makefile
+++ b/sys/dev/misc/Makefile
@@ -1,5 +1,5 @@
 SUBDIR= amdsbwd cmx cpuctl dcons ecc ichwd ipmi joy kbdmux led lpbb \
-	nmdm pcfclock putter snp syscons tbridge coremctl dimm aperf
+	nmdm pcfclock snp syscons tbridge coremctl dimm aperf
 
 .if ${MACHINE_ARCH} == "x86_64"
 SUBDIR+=efirt
