--- a/usr.sbin/makefs/ffs/Makefile.inc
+++ b/usr.sbin/makefs/ffs/Makefile.inc
@@ -1,7 +1,7 @@
 #	$FreeBSD: head/usr.sbin/makefs/ffs/Makefile.inc 332844 2018-04-20 22:23:38Z emaste $
 #
 
-.PATH:	${SRCDIR}/ffs ${SRCTOP}/sys/ufs/ffs
+.PATH:	${.CURDIR}/ffs ${.CURDIR}/../../sys/vfs/ufs
 SRCS+=	ffs_alloc.c ffs_balloc.c ffs_bswap.c ffs_subr.c ufs_bmap.c
 SRCS+=	buf.c mkfs.c
 
