--- a/lib/libc/x86_64/sys/Makefile.inc
+++ b/lib/libc/x86_64/sys/Makefile.inc
@@ -3,11 +3,11 @@
 
 SRCS+=	amd64_get_fsbase.c amd64_get_gsbase.c amd64_set_fsbase.c amd64_set_gsbase.c
 
-MDASM=	vfork.S brk.S cerror.S exect.S getcontext.S pipe.S pipe2.S ptrace.S \
-	reboot.S sbrk.S setlogin.S sigreturn.S
+MDASM=	vfork.S cerror.S exect.S getcontext.S pipe.S pipe2.S ptrace.S \
+	reboot.S fake_sbrk.S setlogin.S sigreturn.S
 
 # Don't generate default code for these syscalls:
-NOASM=	break.o exit.o ftruncate.o getdomainname.o getlogin.o \
+NOASM=	exit.o ftruncate.o getdomainname.o getlogin.o \
 	lseek.o mmap.o openbsd_poll.o pread.o \
 	pwrite.o setdomainname.o sstk.o truncate.o uname.o vfork.o yield.o \
 	fork.o
