manpath.config: Add ravenports paths.
While here, remove an obsolete line.

Reported-by: marino

--- a/gnu/usr.bin/man/manpath/manpath.config
+++ b/gnu/usr.bin/man/manpath/manpath.config
@@ -12,12 +12,12 @@
 # every automatically generated MANPATH includes these fields
 #
 MANDATORY_MANPATH	/usr/share/man
-MANDATORY_MANPATH	/usr/share/openssl/man
 #
 # check if the directory exists and if it does, add it to MANPATH
 #
 OPTIONAL_MANPATH	/usr/local/man
 OPTIONAL_MANPATH	/usr/pkg/man
+OPTIONAL_MANPATH	/raven/share/man
 #
 # set up PATH to MANPATH mapping
 #
@@ -25,6 +25,7 @@ MANPATH_MAP	/bin			/usr/share/man
 MANPATH_MAP	/usr/bin		/usr/share/man
 MANPATH_MAP	/usr/local/bin		/usr/local/man
 MANPATH_MAP	/usr/local/bin		/usr/local/share/man
+MANPATH_MAP	/raven/bin		/raven/share/man
 #
 # set man locales, if needed
 #
