calendar(1): Rework calendar files installation
Switch the installation of calendar files to use FILES and SYMLINKS
instead of bare install(1).  Also explicitly list each file to install
so we don't silently add or miss some.

Obtained-from: FreeBSD (revision 334102)

--- a/usr.bin/calendar/Makefile
+++ b/usr.bin/calendar/Makefile
@@ -1,5 +1,5 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: src/usr.bin/calendar/Makefile,v 1.12.8.6 2003/04/06 20:04:56 dwmalone Exp $
+# $FreeBSD: head/usr.bin/calendar/Makefile 334102 2018-05-23 16:28:31Z brd $
 
 PROG=	calendar
 SRCS=	calendar.c locale.c events.c dates.c parsedata.c io.c day.c \
@@ -14,25 +14,108 @@ INTER=		de_AT.ISO8859-15 de_DE.ISO8859-1 fr_FR.ISO8859-1 \
 		pt_BR.UTF-8 ru_RU.KOI8-R ru_RU.UTF-8 uk_UA.KOI8-U
 DE_LINKS=	de_DE.ISO8859-15
 FR_LINKS=	fr_FR.ISO8859-15
-TEXTMODE?=	444
 
-beforeinstall:
-	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m ${TEXTMODE} \
-	    ${.CURDIR}/calendars/calendar.* \
-	    ${DESTDIR}${SHAREDIR}/calendar
+FILESGROUPS+=	CALS
+CALS=		calendars/calendar.all \
+		calendars/calendar.australia \
+		calendars/calendar.birthday \
+		calendars/calendar.brazilian \
+		calendars/calendar.christian \
+		calendars/calendar.computer \
+		calendars/calendar.croatian \
+		calendars/calendar.dragonfly \
+		calendars/calendar.dutch \
+		calendars/calendar.french \
+		calendars/calendar.german \
+		calendars/calendar.history \
+		calendars/calendar.holiday \
+		calendars/calendar.hungarian \
+		calendars/calendar.judaic \
+		calendars/calendar.lotr \
+		calendars/calendar.music \
+		calendars/calendar.newzealand \
+		calendars/calendar.russian \
+		calendars/calendar.southafrica \
+		calendars/calendar.ukrainian \
+		calendars/calendar.usholiday \
+		calendars/calendar.world
+CALSDIR=	${SHAREDIR}/calendar
+
+CAL_de_AT.ISO8859-15=	calendar.feiertag
+
+CAL_de_DE.ISO8859-1= \
+		calendar.all \
+		calendar.feiertag \
+		calendar.geschichte \
+		calendar.kirche \
+		calendar.literatur \
+		calendar.musik \
+		calendar.wissenschaft
+
+CAL_fr_FR.ISO8859-1= \
+		calendar.all \
+		calendar.fetes \
+		calendar.french \
+		calendar.jferies \
+		calendar.proverbes
+
+CAL_hr_HR.ISO8859-2= \
+		calendar.all \
+		calendar.praznici
+
+CAL_hu_HU.ISO8859-2= \
+		calendar.all \
+		calendar.nevnapok \
+		calendar.unnepek
+
+CAL_pt_BR.ISO8859-1= \
+		calendar.all \
+		calendar.commemorative \
+		calendar.holidays \
+		calendar.mcommemorative
+
+CAL_pt_BR.UTF-8= \
+		calendar.all \
+		calendar.commemorative \
+		calendar.holidays \
+		calendar.mcommemorative
+
+CAL_ru_RU.KOI8-R= \
+		calendar.all \
+		calendar.common \
+		calendar.holiday \
+		calendar.military \
+		calendar.orthodox \
+		calendar.pagan
+
+CAL_ru_RU.UTF-8= \
+		calendar.all \
+		calendar.common \
+		calendar.holiday \
+		calendar.military \
+		calendar.orthodox \
+		calendar.pagan
+
+CAL_uk_UA.KOI8-U= \
+		calendar.all \
+		calendar.holiday \
+		calendar.misc \
+		calendar.orthodox
+
 .for lang in ${INTER}
-	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m ${TEXTMODE} \
-	    ${.CURDIR}/calendars/${lang}/calendar.* \
-	    ${DESTDIR}${SHAREDIR}/calendar/${lang}
+FILESGROUPS+=	CALS_${lang}
+CALS_${lang}DIR=${SHAREDIR}/calendar/${lang}
+.  for file in ${CAL_${lang}}
+CALS_${lang}+=	${file:S@^@calendars/${lang}/@}
+.  endfor
 .endfor
+
 .for link in ${DE_LINKS}
-	rm -rf ${DESTDIR}${SHAREDIR}/calendar/${link}
-	${LN} -s de_DE.ISO8859-1 ${DESTDIR}${SHAREDIR}/calendar/${link}
+SYMLINKS+=	de_DE.ISO8859-1 ${SHAREDIR}/calendar/${link}
 .endfor
 .for link in ${FR_LINKS}
-	rm -rf ${DESTDIR}${SHAREDIR}/calendar/${link}
-	${LN} -s fr_FR.ISO8859-1 ${DESTDIR}${SHAREDIR}/calendar/${link}
+SYMLINKS+=	fr_FR.ISO8859-1 ${SHAREDIR}/calendar/${link}
 .endfor
-.endif
+.endif  # !defined(NO_SHARE)
 
 .include <bsd.prog.mk>
