--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -119,25 +119,21 @@
     ..
     share
         calendar
-            de_AT.ISO8859-15
+            de_AT.UTF-8
             ..
-            de_DE.ISO8859-1
+            de_DE.UTF-8
             ..
-            fr_FR.ISO8859-1
+            fr_FR.UTF-8
             ..
-            hr_HR.ISO8859-2
+            hr_HR.UTF-8
             ..
-            hu_HU.ISO8859-2
-            ..
-            pt_BR.ISO8859-1
+            hu_HU.UTF-8
             ..
             pt_BR.UTF-8
             ..
-            ru_RU.KOI8-R
-            ..
             ru_RU.UTF-8
             ..
-            uk_UA.KOI8-U
+            uk_UA.UTF-8
             ..
         ..
         dict
