--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3869,6 +3869,7 @@ TO_REMOVE+=/usr/share/calendar/hu_HU.ISO8859-2
 TO_REMOVE+=/usr/share/calendar/pt_BR.ISO8859-1
 TO_REMOVE+=/usr/share/calendar/ru_RU.KOI8-R
 TO_REMOVE+=/usr/share/calendar/uk_UA.KOI8-U
+TO_REMOVE+=/usr/share/calendar/fr_FR.UTF-8/calendar.french
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
