Remove <sys/semaphore.h> so that we have <semaphore.h> only.
There is no point for us to go through the kernel for getting at
SEM_VALUE_MAX from sysconf(3), so return it directly and remove
the associated p1003_1b.sem_value_max sysctl.

Beyond that, the kernel didn't need this header. I've found no
ports that need it, either.

For safety, bump __DragonFly_version anyway.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3496,6 +3496,7 @@ TO_REMOVE+=/usr/share/man/man3/refuse.3.gz
 TO_REMOVE+=/usr/share/man/man4/puffs.4.gz
 TO_REMOVE+=/usr/share/man/man8/mount_psshfs.8.gz
 TO_REMOVE+=/usr/share/man/man9/putter.9.gz
+TO_REMOVE+=/usr/include/sys/semaphore.h
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
