--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3497,6 +3497,7 @@ TO_REMOVE+=/usr/share/man/man4/puffs.4.gz
 TO_REMOVE+=/usr/share/man/man8/mount_psshfs.8.gz
 TO_REMOVE+=/usr/share/man/man9/putter.9.gz
 TO_REMOVE+=/usr/include/sys/semaphore.h
+TO_REMOVE+=/usr/share/man/man2/brk.2.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
