--- a/lib/libc/sys/Makefile.inc
+++ b/lib/libc/sys/Makefile.inc
@@ -62,8 +62,7 @@ ${SPSEUDO}:
 	printf  ${NOTE_GNU_STACK} >> ${.TARGET}
 
 .if ${LIB} == "c"
-MAN+=	_exit.2 accept.2 access.2 acct.2 adjtime.2 \
-	bind.2 brk.2 \
+MAN+=	_exit.2 accept.2 access.2 acct.2 adjtime.2 bind.2 \
 	sys_checkpoint.2 chdir.2 chflags.2 \
 	chmod.2 chown.2 chroot.2 clock_gettime.2 close.2 closefrom.2 \
 	connect.2 dup.2 exec_sys_register.2 execve.2 extattr.2 extexit.2 \
@@ -89,7 +88,7 @@ MAN+=	_exit.2 accept.2 access.2 acct.2 adjtime.2 \
 	quotactl.2 \
 	read.2 readlink.2 reboot.2 recv.2 rename.2 revoke.2 rfork.2 rmdir.2 \
 	rtprio.2 \
-	sched_getcpu.2 sched_get_priority_max.2 sched_setaffinity.2 \
+	sbrk.2 sched_getcpu.2 sched_get_priority_max.2 sched_setaffinity.2 \
 	sched_setparam.2 sched_setscheduler.2 sched_yield.2 \
 	select.2 semctl.2 semget.2 semop.2 send.2 sendfile.2 \
 	setgroups.2 setpgid.2 setregid.2 setresuid.2 setreuid.2 setsid.2 \
@@ -106,7 +105,6 @@ MAN+=	_exit.2 accept.2 access.2 acct.2 adjtime.2 \
 MLINKS+=accept.2 accept4.2
 MLINKS+=access.2 eaccess.2 \
 	access.2 faccessat.2
-MLINKS+=brk.2 sbrk.2
 MLINKS+=chdir.2 fchdir.2
 MLINKS+=chflags.2 chflagsat.2 \
 	chflags.2 fchflags.2 \
