--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -917,14 +917,8 @@ bstrap-${_tool}!
 # and this file for WORLD_CCVER.
 #
 _gcc47_cross= gnu/usr.bin/cc47
-_gcc47_tools= gnu/usr.bin/cc47/cc_prep gnu/usr.bin/cc47/cc_tools
-
 _gcc50_cross= gnu/usr.bin/cc50
-_gcc50_tools= gnu/usr.bin/cc50/cc_prep gnu/usr.bin/cc50/cc_tools
-
 _gcc80_cross= gnu/usr.bin/cc80
-_gcc80_tools= gnu/usr.bin/cc80/cc_prep gnu/usr.bin/cc80/cc_tools
-
 _gcc_common_cross= lib/libz gnu/usr.bin/gmp gnu/usr.bin/mpfr gnu/usr.bin/mpc
 
 .if !defined(NO_ALTCOMPILER)
@@ -939,12 +933,7 @@ _altcompiler_cross+= ${_gcc50_cross}
 . endif
 .endif
 
-#.if !defined(NO_ALTCOMPILER)
-#. if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc80})
-#_altcompiler_cross+= ${_gcc80_cross}
-_basecompiler_cross+= ${_gcc80_cross}
-#. endif
-#.endif
+_basecompiler_cross= ${_gcc80_cross}
 
 _custom_cross= libexec/customcc
 _binutils= gnu/usr.bin/${WORLD_BINUTILSVER}
@@ -996,15 +985,10 @@ hierarchy:
 # .makeenv does not work when bootstrapping from 4.x, so we must be sure
 # to specify the correct CCVER or 'cc' will not exec the correct compiler.
 #
-# NOTE: Allow duplicate build for WORLD_ALTCOMPILER=all for WORLD_CCVER,
-#	It will already be built so it won't cost any extra time.  Please
-#	list all compilers in the ALTCOMPILER sequence, including the base
-#	compile.
-#
 libraries:
 	cd ${.CURDIR}; \
-	    HOST_CCVER=${HOST_CCVER} CCVER=${WORLD_CCVER} \
-		make -f Makefile.inc1 ${_startup_libs_base} -DSYSBUILD -DLIBGCC_ONLY;
+	    HOST_CCVER=${HOST_CCVER} CCVER=gcc80 \
+		make -f Makefile.inc1 _startup_libs80 -DSYSBUILD -DLIBGCC_ONLY;
 .if !defined(NO_ALTCOMPILER)
 . if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc47})
 	cd ${.CURDIR}; \
@@ -1015,11 +999,6 @@ libraries:
 	cd ${.CURDIR}; \
 	    HOST_CCVER=${HOST_CCVER} CCVER=gcc50 \
 		make -f Makefile.inc1 _startup_libs50 -DSYSBUILD -DLIBGCC_ONLY;
-. endif
-. if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc80})
-	cd ${.CURDIR}; \
-	    HOST_CCVER=${HOST_CCVER} CCVER=gcc80 \
-		make -f Makefile.inc1 _startup_libs80 -DSYSBUILD -DLIBGCC_ONLY;
 . endif
 .endif
 	cd ${.CURDIR}; \
@@ -1055,8 +1034,6 @@ _startup_libs80=	gnu/usr.bin/cc80/cc_prep \
 			gnu/lib/gcc80/libgcc_eh \
 			gnu/lib/gcc80/libgcc_pic
 
-# gcc80 is now the default compiler.  See sys.mk for WORLD_ALTCOMPILER default.
-#
 .if !defined(NO_ALTCOMPILER)
 . if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc47})
 _startup_libs_alt+=	_startup_libs47
@@ -1069,12 +1046,7 @@ _startup_libs_alt+=	_startup_libs50
 . endif
 .endif
 
-#.if !defined(NO_ALTCOMPILER)
-#. if defined(WORLD_ALTCOMPILER) && (${WORLD_ALTCOMPILER} == "all" || ${WORLD_ALTCOMPILER:Mgcc80})
-#_startup_libs_alt+=     _startup_libs80
-_startup_libs_base+=     _startup_libs80
-#. endif
-#.endif
+_startup_libs_base=	_startup_libs80
 
 _startup_libs=		lib/csu lib/libc lib/libc_rtld
 lib/libc__L: lib/csu__L
